default/1 - Nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
          nodeAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                - key: for
                  operator: In
                  values:
                  - webserver      
      containers:
      - name: nginx
        image: web-home:1.0
        imagePullPolicy: Never  
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 0.015
            memory: 16Mi
          limits:
            cpu: 0.150
            memory: 64Mi
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    nodePort: 30000
