default/3 - mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo 
  serviceName: "mongo-svc"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: for
                operator: In
                values:
                - storage         
      containers:
      - name: mongo
        image: mongo:6.0.3
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: 0.02
            memory: 32Mi
          limits:
            cpu: 0.150
            memory: 256Mi
        volumeMounts:
        - name: db-content
          mountPath: /data/db
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: db-secret
  volumeClaimTemplates:
  - metadata:
      name: db-content
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 5Gi

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    app: mongo-svc
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
