default/6 - ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-system-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/home"
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/adm"
        backend:
          service:
            name: mongo-express-svc
            port:
              number: 8081
